Add lts-16 to github build

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         resolver:
+          - lts-16
           - lts-15
           - lts-14
           - lts-13
